css/style.css
/* standard style for default tags */
body {
	font-family: "Lucida Grande", sans-serif;
	color: #ffffff;
	background-color: #000000;
}

h1 {
	font-size: 64px;
	text-align: center;
}

h2 {
	font-size: 30px;
	text-shadow: 5px 5px 2px #808080;
}

p {
	font-size: 24px;
	padding-top: 20px;
}

img {
	display: block;
	margin: auto;
	max-width: 525px;
}

div {
	min-height: 150px;
	padding: 25px 25px 25px 25px;
}

/* styles for specific divs using id */
div#red {
	background-color: #ff0000;
	text-align: left;
}

div#blue {
	background-color: #0000ff;
	text-align: left;
}

div#yellow {
	background-color: #ffff00;
	text-align: right;
	color: #000000;
}

div#yellow > h2  {
	text-shadow: 5px 5px 2px #c7e2c7;
}

div#green {
	background-color: #008000; 
	text-align: left;
}

/* footer paragraph style */
footer > p {
	text-align: right;
	padding-bottom: 10px;
	padding-right: 10px;
}

